--- a/portfolio-ui-page/index.html
+++ b/portfolio-ui-page/index.html
@@ -13,6 +13,7 @@
         <div class="container">
             <div class="logo">
                 <img src="port-logo-img.jpg" alt="">
+                <p>hello</p>
             </div>
             <div class="three-dot">
                 <a href=""><i class="fa-solid fa-bars"></i></a>
