--- a/portfolio-ui-page/index.html
+++ b/portfolio-ui-page/index.html
@@ -47,13 +47,7 @@
             <div class="about-sec">
                 <h1 class="font1">HII , I'm Manjeet</h1>
                  <p class="font2">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Culpa, laboriosam id in doloribus deleniti sunt optio, 
-                    voluptates esse ex consequuntur natus alias reprehend
-                    erit dolorem porro nemo ut. Magnam ratione quis iure l
-                    aboriosam corporis libero, temporibus quae sit dolorum 
-                    nihil nisi officiis exercitationem quia! Omnis officia
-                    eos dignissimos. Et, suscipit fuga.
+                    HII
                  </p>
                  <div class="about-logo">
                     <a href="https://www.linkedin.com/in/
